# Vetrace-Engine-Env

./: .gitignore  AI_RULES.md  APP_FRAMEWORK_GUIDE.md  CHANGELOG_AI.md  Cargo.toml  KNOWN_PATTERN.md  MIGRATION_GUIDE.md  PROJECT_MAP.md  README.md  TASK_WORKFLOW.md  ddgi_no_gi_fix_clean.patch  space.json
simple_shooter/: Cargo.toml
simple_shooter/assets/: damage_vignette.wgsl  player_gradient.wgsl  player_outline.wgsl  playground_map.json  playground_map.scene.json  post_vignette.wgsl
simple_shooter/assets/weapons/: README.txt  compact_pistol.json  default_weapon.json
simple_shooter/maps/: README.txt  first map.json
simple_shooter/mods/: enabled_mods.json
simple_shooter/mods/low_gravity/: main.lua  mod.json
simple_shooter/src/: app.rs  main.rs  net.rs  replication.rs
simple_shooter/src/app/: audio.rs  bot_ai.rs  camera_input.rs  free_flight.rs  gameplay.rs  health_feedback.rs  join_menu.rs  killcam.rs  lobby.rs  main_menu.rs  map_transfer.rs  maps.rs  modding.rs  pause_menu.rs  pipeline.rs  player_visuals.rs  runtime.rs  server_browser.rs  setup.rs  simulation.rs  weapons.rs
simple_shooter/src/components/: config.rs  gameplay.rs  graphics_profile.rs  mod.rs  modding.rs  player.rs  ui.rs  visuals.rs  weapon.rs
vetrace_asset/: Cargo.toml
vetrace_asset/src/: builtin_importers.rs  database.rs  error.rs  filesystem.rs  importer.rs  lib.rs  manager.rs  record.rs  scan.rs  watcher.rs
vetrace_asset/tests/: asset_flow.rs
vetrace_audio/: Cargo.toml
vetrace_audio/src/: components.rs  lib.rs
vetrace_audio/src/backend/: kira09.rs  mod.rs  noop.rs
vetrace_build/: Cargo.toml
vetrace_build/src/: config.rs  distribution.rs  error.rs  export.rs  lib.rs  package.rs  template.rs
vetrace_build/src/template_manager/: helpers.rs  mod.rs
vetrace_build/tests/: build_flow.rs
vetrace_core/: Cargo.toml
vetrace_core/src/: architecture_tests.rs  backends.rs  bundle.rs  commands.rs  events.rs  hierarchy.rs  input.rs  lib.rs  query.rs  resources.rs  schedule.rs
vetrace_core/src/actor/: builder.rs  error.rs  handle.rs  (+2 more)
vetrace_editor/: Cargo.toml  README.md
vetrace_editor/examples/: editor_smoke.rs
vetrace_editor/src/: gizmo.rs  history.rs  inspector.rs  lib.rs  selection.rs  ui_components.rs
vetrace_engine/: .gitignore  APP_FRAMEWORK_GUIDE.md  Cargo.toml  ENGINE_GUIDE.md  LICENSE  README.md  REFACTORING_GUIDE.md  build.rs  ddgi_stability_fix.patch  vetrace_startup_hybrid_fix.patch
vetrace_engine/assets/: bullet.json  car.json  enemy.json  floor.json  game_controller.json  player.json  score_label.json  test.wgsl
vetrace_engine/docs/: EFFECT_FALLBACKS.md  RENDERER_IMPLEMENTATION_TASKS.md  RENDERER_PARITY.md  SHADER_ARCHITECTURE.md  WEBGPU_UI_SYSTEM.md
vetrace_engine/examples/: app_framework_demo.rs  app_host.rs  audio_cube.rs  car.rs  clean_engine_demo.rs  editor_demo.rs  emissive_glow.rs  minimal_framework.rs  net_client.rs  net_game_client.rs  net_game_server.rs  net_server.rs  planet_game.rs  rainbow_custom_material.rs  rope.rs  simple_car.rs  simple_car_client.rs  simple_car_server.rs  sprite.rs  test.rs  the_earth.rs  top_down_2d.rs  top_down_lua.rs  top_down_shooter.rs  ui_interaction.rs  walk_animation.rs  webgpu_ui_demo.rs
vetrace_engine/shaders/: morph_pbr.wgsl  simple_pbr.wgsl
vetrace_engine/src/: assets.rs  custom_material.rs  events.rs  gpu.rs  lib.rs  lod.rs  materials.rs  math.rs  shared.rs
vetrace_lua_tools/: Cargo.toml
vetrace_lua_tools/src/: completion.rs  constants.rs  diagnostics.rs  formatting.rs  highlighting.rs  lib.rs  service.rs  symbols.rs
vetrace_map_builder/: Cargo.toml  README.md
vetrace_map_builder/src/: main.rs
vetrace_physics/: Cargo.toml
vetrace_physics/src/: actor_ext.rs  backend.rs  character.rs  cleanup.rs  colliders.rs  components.rs  gltf_collisions.rs  lib.rs  plugin.rs  raycast.rs  scene_definitions.rs  state.rs  sync.rs
vetrace_player/: Cargo.toml
vetrace_player/src/: args.rs  error.rs  lib.rs  main.rs  player.rs
vetrace_player/tests/: player_flow.rs
vetrace_primitives/: Cargo.toml
vetrace_primitives/src/: lib.rs
vetrace_render/: BAKED_LIGHTING.md  Cargo.toml  RENDER_TEXTURES.md
vetrace_render/examples/: basic_render.rs  cornell_box_baked_gi.rs  cubemap_environment.rs  raymarched_cloud.rs  raymarched_cloud.wgsl  render_texture_portal.rs  render_texture_portal.wgsl  sprite_2d.rs
vetrace_render/shaders/: simple_pbr.wgsl
vetrace_render/src/: actor_ext.rs  backend.rs  backend_target.rs  backend_ui_extract.rs  backend_utils.rs  baked_lighting.rs  baked_lighting_bake.rs  baked_lighting_bake_tests.rs  baked_lighting_geometry.rs  component_2d.rs  component_baked_lighting.rs  component_custom_shader.rs  component_environment.rs  component_gltf_collision.rs  component_handles.rs  component_lighting.rs  component_material.rs  component_post_processing.rs  component_primitives.rs  component_render_texture.rs  components.rs  gltf_loader.rs  lib.rs  plugin.rs  render_frame.rs  sdl.rs  wgpu_backend.rs  wgpu_window.rs
vetrace_render/tests/: wgsl_validation.rs
vetrace_runtime/: Cargo.toml  README.md
vetrace_runtime/examples/: run_project.rs
vetrace_runtime/src/: app.rs  builder.rs  config.rs  error.rs  hot_reload.rs  input.rs  lib.rs  mode.rs  plugins.rs  resources.rs  runtime.rs  scene_loader.rs  scripting.rs  settings.rs  state.rs
vetrace_runtime/tests/: runtime_flow.rs
vetrace_scene/: Cargo.toml
vetrace_scene/src/: assets.rs  component.rs  document.rs  export.rs  ids.rs  instance.rs  io.rs  legacy.rs  lib.rs  material.rs  node.rs  prefab.rs  transform.rs
vetrace_scripting_lua/: Cargo.toml  README.md
vetrace_scripting_lua/src/: components.rs  context.rs  diagnostics.rs  input.rs  lib.rs  modding.rs  plugin.rs  resources.rs  state.rs
vetrace_scripting_lua/tests/: gameplay_runtime.rs
vetrace_studio/: Cargo.toml  README.md
vetrace_studio/src/: args.rs  asset_browser.rs  assets.rs  bridge.rs  build_panel.rs  builds.rs  debugger.rs  lib.rs  main.rs  process.rs  recovery.rs  scene.rs  script_asset_ui.rs  script_assets.rs
vetrace_web/: Cargo.toml
vetrace_web/src/: lib.rs  wasm.rs
(+661 files in other folders)
