[workspace]
members = [
    "vetrace_engine",
    "vetrace_engine/vetrace_editor",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across the workspace
egui = "0.28"
glam = { version = "0.24", features = ["mint", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
