[workspace]
resolver = "2"
members = [
    "simple_shooter",
    "vetrace_animation",
    "vetrace_asset",
    "vetrace_audio",
    "vetrace_build",
    "vetrace_core",
    "vetrace_editor",
    "vetrace_engine",
    "vetrace_engine_macros",
    "vetrace_map_builder",
    "vetrace_net",
    "vetrace_pathfinding",
    "vetrace_physics",
    "vetrace_player",
    "vetrace_primitives",
    "vetrace_profiler",
    "vetrace_project",
    "vetrace_render",
    "vetrace_runtime",
    "vetrace_script_editor",
    "vetrace_scene",
    "vetrace_scripting_lua",
    "vetrace_lua_tools",
    "vetrace_studio",
    "vetrace_ui",
    "vetrace_web",
]

[workspace.dependencies]
blake3 = "1.8.5"
notify = "8.2.0"
rfd = "0.17.2"
anyhow = "1"
glam = { version = "0.24", features = ["serde", "mint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
