[package]
name = "vetrace_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
kira = { version = "0.9", optional = true }
mint = { version = "0.5", optional = true }
glam = { workspace = true }
vetrace_core = { path = "../vetrace_core" }
serde = { workspace = true }

[features]
default = []
kira_backend = ["dep:kira", "dep:mint"]
