[package]
name = "vetrace_engine"
version = "0.27.1"
edition = "2024"
readme = "README.md"
categories = ["gui", "graphics"]
keywords = ["sdl2", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml", "/shaders"]
build = "build.rs"


[dependencies]
vetrace_engine_macros= { path = "../vetrace_engine_macros" }
ahash = "~0.8"
gl = "~0.14"
egui = "~0.28"
sdl2 = { version = "0.38", features = ["raw-window-handle"] }
wgpu = "0.20"
shaderc = "0.8"
egui-wgpu = { version = "0.28", optional = true }
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"
memoffset = "0.9.0"
glam = { version = "0.24", features = ["mint","serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3"
once_cell = "1.21.3"
mlua = { version = "0.11.0-beta.3", features = ["lua54", "vendored"] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
rapier3d = "0.26.1"
bvh = "0.11"
image = { version = "0.25", features = ["png", "jpeg"] }
kira = "0.10"
mint = "0.5"
either = "1"
transform-gizmo-egui = "0.3"
anyhow = "1.0"
gltf = { version = "1", features = ["extensions", "KHR_materials_ior", "KHR_materials_transmission"] }
base64 = "0.21"
parking_lot = "0.12"
enumset = "1.1.7"

[dev-dependencies]
rand = "0.8"
vetrace_editor = { path = "../vetrace_editor" }

[dependencies.epi]
version = "0.17"
optional = true

[features]
default = ["sdl2_bundled", "use_epi", "wgpu"]

sdl2_unsafe_textures = ["sdl2/unsafe_textures"]
sdl2_gfx = ["sdl2/gfx"]
sdl2_mixer = ["sdl2/mixer"]
sdl2_image = ["sdl2/image"]
sdl2_ttf = ["sdl2/ttf"]
# SDL2 build features
sdl2_use-bindgen = ["sdl2/use-bindgen"]
sdl2_use-pkgconfig = ["sdl2/use-pkgconfig"]
sdl2_use-vcpkg = ["sdl2/use-vcpkg"]
sdl2_use-mac_framework = ["sdl2/use_mac_framework"]
sdl2_bundled = ["sdl2/bundled"]
sdl2_static-link = ["sdl2/static-link"]
use_epi = ["epi"]
wgpu = ["egui-wgpu"]