[package]
name = "vetrace_web"
version = "0.1.0"
edition = "2024"
description = "Browser runtime and live examples for the Vetrace engine"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
vetrace_core = { path = "../vetrace_core" }
vetrace_render = { path = "../vetrace_render", features = ["wgpu_render", "egui_render"] }
glam = { workspace = true }
wgpu = "0.20.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { workspace = true, features = ["js"] }
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "DomStringMap",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "PointerEvent",
    "Response",
    "UrlSearchParams",
    "WheelEvent",
    "Window",
] }

[features]
default = []
render_2d = ["vetrace_render/render_2d"]
